<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="Početna"/>

    <item
        android:id="@+id/nav_button2"
        android:icon="@android:drawable/ic_input_get"
        android:title="Organizatori" />

    <item
        android:id="@+id/nav_button3"
        android:icon="@drawable/ic_build"
        android:title="Izvođači" />

    <item
        android:id="@+id/nav_button4"
        android:icon="@android:drawable/ic_lock_lock"
        android:title="Info" />

</menu>