<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/parent_layout"
    android:padding="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/profilna"
        android:src="@mipmap/ic_launcher"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameSurname"
        android:text="ime i prezime"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/profilna"
        android:layout_marginLeft="20dp"
        android:textSize="24dp"
        android:textColor="#000000"
        />


</RelativeLayout>